2008-09-12  Mike Kestner <mkestner@novell.com> 

	* DockContainer.cs:
	* DockFrame.cs:
	Don't iterate directly over internal lists of widgets, since the
	callback can remove the widget and invalidate the enumerator.

2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Dock.mdp: Updated.

2008-07-14  Lluis Sanchez Gual <lluis@novell.com> 

	* AssemblyInfo.cs: Fix copyright header.

2008-07-09  Lluis Sanchez Gual <lluis@novell.com> 

	* DockGroup.cs: RemoveItemRec: don't keep looking if the item has
	  already been removed.

2008-05-26  Lluis Sanchez Gual <lluis@novell.com> 

	* TabStrip.cs: Fix gtk warning.

2008-03-17  Michael Hutchinson <mhutchinson@novell.com> 

	* DockItem.cs: Draw dockable/floating/autohide options as radio
	  buttons, as they behave this way. Thanks to Gabriel Burt for this
	  patch.

2008-03-10  Lluis Sanchez Gual <lluis@novell.com> 

	* DockFrame.cs: Update autohide buttons when the title of an item
	  changes. Fixes bug #368436 - Build Output autohide button missing.

2008-02-18  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Dock.mdp: Fix project references.

2008-01-22  Lluis Sanchez Gual <lluis@novell.com> 

	* DockContainer.cs: Added missing null check.

2008-01-18  Lluis Sanchez Gual <lluis@novell.com> 

	* DockObject.cs: Use invariant locale to store doubles. Fixes bug #354567.

2008-01-15  Michael Hutchinson <mhutchinson@novell.com> 

	* layout.glade: Fix typo.

2008-01-11  Lluis Sanchez Gual <lluis@novell.com> 

	* DockFrame.cs: Actually remove the item in RemoveItem.

2008-01-10  Lluis Sanchez Gual <lluis@novell.com> 

	* DockGroupItem.cs, DockGroup.cs, DockItem.cs, DockFrame.cs: Load stored
	  item position, even if the item has not been added to the frame. In this
	  way it is possible to restore the position of items which are
	  dynamically added.

2008-01-08  Lluis Sanchez Gual <lluis@novell.com> 

	* DockBarItem.cs: Don't auto-hide the item while it has the focus.
