@@ -653,6 +653,14 @@ namespace MonoDevelop.Components.Docking
 				}
 			}
 		}
+
+		internal bool IsSelectedPage (DockItem it)
+		{
+			if (type != DockGroupType.Tabbed || boundTabStrip.CurrentTab == -1 || boundTabStrip.CurrentTab >= VisibleObjects.Count)
+				return false;
+			DockGroupItem dit = VisibleObjects[boundTabStrip.CurrentTab] as DockGroupItem;
+			return dit.Item == it;
+		}
 		
 		internal void UpdateTitle (DockItem it)
 		{
