@@ -42,6 +42,7 @@ namespace MonoDevelop.Components.Docking
 		CantClose = 1 << 3,
 		CantAutoHide = 1 << 4,
 		NoGrip = 1 << 5,
+		Sticky = 1 << 6,  // Visibility is the same for al layouts
 		Locked = NoGrip,
 	}
 }
